# semisemisemisemi-classroom-5273b0-problem1-problem

./: CMakeLists.txt  README.md  generate_problem.py
github/workflows/: main.yml
src/: solution.cpp
tests/: test_solution.cpp
